# ultimate-convertor-bot

./: .env.example  Makefile  config.py  main.py  pyproject.toml  requirements.txt
commands/: convert-audio.py  convert-image.py  convert-video.py  download-from-youtube.py  echo.py  extract-audio.py  ping.py
events/: on_ready.py
scripts/: commands_checker.py  delete_commands.py  register_guild.py
utils/: command_loader.py  logger.py
